Sun May 18 09:16:33 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check nextafter() availability.

	* include/ruby/missing.h (nextafter): New optional declaration.

	* missing/nextafter.c: New file.

	* numeric.c: Float#next_float and Float#prev_float implemented.

	   [ruby-core:62562] [Feature #9834]

Sun May 18 09:02:17 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c: Enumerable#slice_after implemented.

	* enumerator.c: Enumerator::Lazy#slice_after implemented.

	  Requested by Tsuyoshi Sawada.  [ruby-core:58123] [Feature #9071]

Sun May 18 08:22:25 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_setstrbuf): always check if the buffer is modifiable.
	  [ruby-core:62643] [Bug #9847]

Sun May 18 01:21:23 2014  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h: Hide Rational internal.
	  (RRational): Moved to internal.h
	  (RRATIONAL): Ditto.
	  (RRATIONAL_SET_NUM): Moved to rational.c.
	  (RRATIONAL_SET_DEN): Ditto.

	* rational.c (rb_rational_num): New function.
	  (rb_rational_den): Ditto.

	* include/ruby/intern.h (rb_rational_num): Declared.
	  (rb_rational_den): Ditto.

	*  ext/bigdecimal/bigdecimal.c: Follow the above change.

	* ext/date/date_core.c: Ditto.

	  [ruby-core:60665] [Feature #9513]

Sat May 17 17:04:32 2014  Shota Fukumori  <her@sorah.jp>

	* NEWS: Add news about removal of lib/test/**/*.rb.

Sat May 17 16:57:33 2014  Shota Fukumori  <her@sorah.jp>

	* lib/test: Removed because ruby's test cases now independent to
	  lib/test by r45970. [Feature #9711] [ruby-core:62620]

	  I'm still considering about the future of lib/minitest, lib/test.
	  (bundling gems?)

Sat May 17 15:06:40 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/runner.rb: remove dependency test-unit and minitest
	  from stdlib when running with test-all.
	  [Feature #9711][ruby-core:61890]
	* test/testunit/*.rb: ditto.
	* test/lib: ditto.

Sat May 17 11:02:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
