@@ -1,3 +1,11 @@
+Sun May 18 09:58:17 2014  Tanaka Akira  <akr@fsij.org>
+
+	* ext/etc/etc.c: Etc.uname method implemented.
+
+	* ext/etc/extconf.rb: Check uname() function.
+
+	  [ruby-core:62139] [Feature #9770]
+
 Sun May 18 09:16:33 2014  Tanaka Akira  <akr@fsij.org>
 
 	* configure.in: Check nextafter() availability.
